This is an older change that I am not 100% sure what it was.  I believe it was to add some extra threads for checking the processes to make sure they are working properly.  Has been in production for a while.
git-svn-id: https://svn.joshandmonique.com/svn/SageTV/PrimeNetEncoder@346 970a8ef4-2458-a846-aee5-a606d86be16f